# agent-assistant

./: README.md  pyproject.toml
app/: main.py
app/core/: __init__.py  logging.py  pgvector.py
app/routes/: chat.py
app/services/: search_service.py
app/utils/: misc.py
