[tool.poetry]
name = "agent-assistant"
version = "0.1.0"
description = ""
authors = ["gang.liu"]
readme = "README.md"

[tool.poetry.dependencies] # 定义项目的依赖关系
python = "^3.12"
fastapi = "^0.115.11"
fastcrud = "^0.15.6"
sqlmodel = "^0.0.24"
openai = "^1.68.2"
aiosqlite = "^0.21.0"
greenlet = "^3.1.1"
python-jose = "^3.4.0"
bcrypt = "^4.3.0"
uvicorn = "^0.34.0"
langchain-postgres = "^0.0.13"
langchain-openai = "^0.3.11"
langchain = "^0.3.21"
langchain-core = "^0.3.49"
langchain-community = "^0.3.20"
langgraph = "^0.3.20"
aiohttp = "^3.11.14"


[build-system] # 定义构建系统的配置
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.12"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "app" }
]